# FloodIQ

./: Intructions  README.md
NVIDIAxACER-floodiq-branch/NVIDIAxACER-floodiq-branch/: README.md  pyproject.toml
NVIDIAxACER-floodiq-branch/NVIDIAxACER-floodiq-branch/docs/: GN100_SETUP.md  GN100_TRAINING_PLAN.md  HACKATHON_PLAN.md
NVIDIAxACER-floodiq-branch/NVIDIAxACER-floodiq-branch/floodiq/: __init__.py  data.py  demo_report.py  evaluation.py  models.py  noaa.py  nyc_open_data.py  providers.py  real_grid.py  server.py  service.py  settings.py  simulation.py  sync_real_data.py  train_physicsnemo_surrogate.py
NVIDIAxACER-floodiq-branch/NVIDIAxACER-floodiq-branch/floodiq/solver_backends/: __init__.py  base.py  factory.py  fallback.py  features.py  physicsnemo_backend.py  physicsnemo_compat.py
NVIDIAxACER-floodiq-branch/NVIDIAxACER-floodiq-branch/floodiq/static/: app.js  index.html  styles.css
NVIDIAxACER-floodiq-branch/NVIDIAxACER-floodiq-branch/tests/: test_simulation.py
